@@ -22,12 +22,34 @@
 namespace GtkSharp.Generation {
 
 	using System;
+	using System.Collections;
 	using System.IO;
 	using System.Xml;
 
 	public class EnumGen : GenBase {
 		
-		public EnumGen (XmlElement ns, XmlElement elem) : base (ns, elem) {}
+		string enum_type = String.Empty;
+		ArrayList members = new ArrayList ();
+
+		public EnumGen (XmlElement ns, XmlElement elem) : base (ns, elem) 
+		{
+			foreach (XmlElement member in elem.ChildNodes) {
+				if (member.Name != "member")
+					continue;
+
+				string result = "\t\t" + member.GetAttribute("name");
+				if (member.HasAttribute("value")) {
+					string value = member.GetAttribute("value");
+					if (value.EndsWith("U")) {
+						enum_type = " : uint";
+						value = value.TrimEnd('U');
+					}
+					result += " = " + value;
+				}
+				members.Add (result + ",");
+			}
+		}
+
 		
 		public override string MarshalType {
 			get {
@@ -59,51 +81,13 @@ namespace GtkSharp.Generation {
 				sw.WriteLine ("\t[Flags]");
 			}
 
-			// Ok, this is obscene.  We need to go through the enums first
-			// to find "large" values.  If we find some, we need to change
-			// the base type of the enum.
-
-			string enum_type = null;
-
-			foreach (XmlNode node in Elem.ChildNodes) {
-				if (!(node is XmlElement) || node.Name != "member") {
-					continue;
-				}
-
-				XmlElement member = (XmlElement) node;
-
-				if (member.HasAttribute("value")) {
-					string value = member.GetAttribute("value");
-					if (value.EndsWith("U")) {
-						enum_type = "uint";
-						member.SetAttribute("value", value.TrimEnd('U'));
-					}
-				}
-			}
-
 			sw.WriteLine ("#region Autogenerated code");
 					
-			if (enum_type != null)
-				sw.WriteLine ("\tpublic enum " + Name + " : " + enum_type + " {");
-			else
-				sw.WriteLine ("\tpublic enum " + Name + " {");
-
+			sw.WriteLine ("\tpublic enum " + Name + enum_type + " {");
 			sw.WriteLine ();
 				
-			foreach (XmlNode node in Elem.ChildNodes) {
-				if (!(node is XmlElement) || node.Name != "member") {
-					continue;
-				}
-				
-				XmlElement member = (XmlElement) node;
-
-				sw.Write ("\t\t" + member.GetAttribute("name"));
-				if (member.HasAttribute("value")) {
-					sw.WriteLine (" = " + member.GetAttribute("value") + ",");
-				} else {
-					sw.WriteLine (",");
-				}
-			}
+			foreach (string member in members)
+				sw.WriteLine (member);
 
 			sw.WriteLine ("\t}");
 			sw.WriteLine ("#endregion");
