@@ -1,5 +1,11 @@
 2004-12-27  Mike Kestner  <mkestner@novell.com>
 
+	* generator/EnumGen.cs : rework for a single pass thru ChildNodes.
+	* generator/Parameters.cs : simplify PassAs logic.
+	* generator/SimpleBase.cs : mark abstract.
+
+2004-12-27  Mike Kestner  <mkestner@novell.com>
+
 	* generator/AliasGen.cs : derive from SimpleBase.
 	* generator/ConstStringGen.cs : derive from SimpleBase.
 	* generator/GObjectGen.cs : kill. now uses ManualGen.
